--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,9 @@ dependencies:
   cloud_firestore: ^6.1.0
   flutter_facebook_auth: ^7.1.1  # Update this line
   # new lines
-  firebase_storage: ^13.0.4  # Changed from ^12.3.4
+  http: ^1.1.0
   image_picker: ^1.1.2
+  google_mlkit_translation: ^0.10.0
 
 
   # The following adds the Cupertino Icons font to your application.
