--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   firebase_core: ^4.2.1
   firebase_auth: ^6.1.2
   firebase_database: ^12.0.4
+  # added storage
+  firebase_storage: ^13.0.4
   google_sign_in: ^6.2.2
   shared_preferences: ^2.3.3
   cloud_firestore: ^6.1.0
@@ -42,6 +44,19 @@ dependencies:
   http: ^1.1.0
   image_picker: ^1.1.2
   google_mlkit_translation: ^0.11.0
+
+  #new for mlkit qr code and
+  # --- ML Kit & NLP ---
+  google_mlkit_language_id: ^0.13.0
+  #google_ml_kit: ^0.4.0
+
+
+  # --- QR & Scanner ---
+  #qr_code_scanner: ^1.0.1
+  mobile_scanner: ^5.2.3
+  permission_handler: ^11.0.1
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
